--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 axum = "0.8.4"
+dotenv = "0.15.0"
 regex = "1.11.2"
 reqwest = "0.12.23"
 tokio = { version = "1.47.1", features = ["full"] }
