--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ dotenv = "0.15.0"
 regex = "1.11.2"
 reqwest = "0.12.23"
 tokio = { version = "1.47.1", features = ["full"] }
+tower-http = { version = "0.6.0", features = ["cors"] }
