--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ chrono = "0.4.42"
 dotenv = "0.15.0"
 regex = "1.11.2"
 reqwest = "0.12.23"
+rust-s3 = "0.37.1"
 tokio = { version = "1.47.1", features = ["full"] }
 tower-http = { version = "0.6.0", features = ["cors"] }
