--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 axum = "0.8.4"
 chrono = "0.4.42"
 dotenv = "0.15.0"
+redis = "1.0.1"
 regex = "1.11.2"
 reqwest = "0.12.23"
 rust-s3 = "0.37.1"
