--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2024"
 axum = "0.8.4"
 chrono = "0.4.42"
 dotenv = "0.15.0"
-redis = "1.0.1"
+r2d2 = "0.8.10"
+redis = {version = "1.0.1", features = ["r2d2"]}
 regex = "1.11.2"
 reqwest = "0.12.23"
 rust-s3 = "0.37.1"
